--- a/Compound-Interest-Calculator.html
+++ b/Compound-Interest-Calculator.html
@@ -71,13 +71,13 @@
             opacity: 0.7;
         }
         .container {
-            max-width: 350px;
-            min-width: 220px;
+            max-width: 320px;
+            min-width: 200px;
             width: 95vw;
-            height: 425px;
-            margin: 60px auto 0 auto;
+            height: 380px;
+            margin: 40px auto 0 auto;
             background: linear-gradient(120deg, #fff 90%, #eaf6fb 100%);
-            padding: 12px 8px 8px 8px;
+            padding: 10px 6px 6px 6px;
             border-radius: 14px;
             box-shadow: 0 2px 12px #6093c022, 0 1.5px 8px #e0eaff;
             border: 1.5px solid #e3eaf3;
@@ -92,33 +92,33 @@
             overflow: hidden;
         }
         .container > div[style*="font-size"] {
-            font-size: 1.3rem !important;
-            margin-bottom: 4px !important;
+            font-size: 1.1rem !important;
+            margin-bottom: 2px !important;
         }
         h2 {
-            font-size: 1rem;
+            font-size: 0.9rem;
             margin-bottom: 2px;
         }
         .desc {
-            font-size: 0.8rem;
-            margin-bottom: 4px;
+            font-size: 0.75rem;
+            margin-bottom: 3px;
             text-align: center;
-            line-height: 1.2;
+            line-height: 1.1;
         }
         label {
-            font-size: 0.85rem;
-            margin-top: 8px;
+            font-size: 0.8rem;
+            margin-top: 6px;
         }
         .input-group {
             margin-bottom: 2px;
         }
         input, select {
             width: 100%;
-            padding: 4px 5px;
+            padding: 3px 4px;
             margin-top: 1px;
             border-radius: 3px;
             border: 1px solid #ccc;
-            font-size: 12px;
+            font-size: 11px;
             background: #f9f9fc;
         }
         input:focus, select:focus {
@@ -129,17 +129,17 @@
         }
         .button-row {
             display: flex;
-            gap: 3px;
-            margin-top: 4px;
+            gap: 2px;
+            margin-top: 3px;
         }
         button {
             flex: 1;
-            padding: 5px;
-            font-size: 12px;
+            padding: 4px;
+            font-size: 11px;
             background: linear-gradient(90deg, #816CA6 60%, #5EA4C2 100%);
             color: #fff;
             border: none;
-            border-radius: 6px;
+            border-radius: 4px;
             cursor: pointer;
             transition: background 0.2s, box-shadow 0.2s, transform 0.1s;
             box-shadow: 0 2px 8px #816ca62a;
@@ -150,21 +150,21 @@
             transform: translateY(-2px) scale(1.03);
         }
         .results {
-            margin-top: 8px;
-            padding: 8px;
-            font-size: 0.9rem;
-            border-radius: 6px;
-            background: #f1f7ff;
-            border: 1px solid #5EA4C2;
-            box-shadow: 0 1px 4px #e0eaff;
+            margin-top: 6px;
+            padding: 6px;
+            font-size: 0.85rem;
+            border-radius: 4px;
+            background: linear-gradient(120deg, #f1f7ff 80%, #eaf6fb 100%);
+            border: 1.5px solid #5EA4C2;
+            box-shadow: 0 2px 12px #6093c022, 0 1.5px 8px #e0eaff;
             text-align: center;
             font-weight: 500;
             animation: fadeIn 0.7s;
         }
         .error {
             color: #964069;
-            margin-top: 3px;
-            font-size: 0.8rem;
+            margin-top: 2px;
+            font-size: 0.75rem;
             text-align: center;
         }
         .site-footer {
@@ -224,12 +224,6 @@
 </head>
 <body>
     <div id="three-bg"></div>
-    <div id="header-placeholder"></div>
-    <script>
-        fetch('header.html')
-          .then(response => response.text())
-          .then(data => document.getElementById('header-placeholder').innerHTML = data);
-    </script>
     <div class="sidebar">
         <nav class="sidebar-nav">
             <a href="financial-calculator.html">Financial Calculator</a>
