--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
-            height: 100vh;
-            overflow: hidden;
+            overflow-x: hidden;
         }
         #three-bg {
             position: fixed;
@@ -81,37 +80,85 @@
             position: relative;
             z-index: 1;
             box-sizing: border-box;
-            max-width: 540px;
-            background: linear-gradient(120deg, #fff 80%, #eaf6fb 100%);
+            max-width: 800px;
+            background: linear-gradient(120deg, #fff 90%, #eaf6fb 100%);
             padding: 48px 36px 36px 36px;
             border-radius: 28px;
             box-shadow: 0 8px 32px #6093c033, 0 1.5px 8px #e0eaff;
             border: 1.5px solid #e3eaf3;
             animation: fadeIn 0.7s;
             text-align: center;
-            margin: 0 auto;
+            margin: 120px auto 40px auto;
         }
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(20px);}
             to { opacity: 1; transform: translateY(0);}
         }
         .welcome-emoji {
-            font-size: 3.5rem;
-            margin-bottom: 18px;
+            font-size: 4rem;
+            margin-bottom: 24px;
             display: block;
+            animation: bounce 2s infinite;
+        }
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+            40% { transform: translateY(-10px); }
+            60% { transform: translateY(-5px); }
         }
         .main h2 {
             color: #816CA6;
-            font-size: 2.5rem;
-            margin-bottom: 18px;
+            font-size: 2.8rem;
+            margin-bottom: 24px;
             letter-spacing: 1.5px;
             font-weight: 700;
+            background: linear-gradient(135deg, #816CA6 0%, #5EA4C2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
         .main p {
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             color: #555;
-            margin-bottom: 0;
+            margin-bottom: 32px;
             margin-top: 0;
+            line-height: 1.6;
+        }
+        .tools-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 32px;
+        }
+        .tool-card {
+            background: linear-gradient(135deg, #f8f9ff 0%, #eaf6fb 100%);
+            border-radius: 16px;
+            padding: 24px;
+            border: 1.5px solid #e3eaf3;
+            box-shadow: 0 4px 16px #6093c015;
+            transition: all 0.3s ease;
+            text-decoration: none;
+            color: inherit;
+        }
+        .tool-card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 8px 32px #6093c025;
+            border-color: #816CA6;
+        }
+        .tool-icon {
+            font-size: 2.5rem;
+            margin-bottom: 16px;
+            display: block;
+        }
+        .tool-title {
+            font-size: 1.3rem;
+            font-weight: 600;
+            color: #816CA6;
+            margin-bottom: 8px;
+        }
+        .tool-desc {
+            font-size: 0.95rem;
+            color: #666;
+            line-height: 1.4;
         }
         .site-footer {
             width: 100%;
@@ -143,8 +190,9 @@
                 flex-wrap: wrap;
             }
             .main {
-                margin-top: 120px;
+                margin-top: 140px;
                 padding: 24px 10px;
+                margin-bottom: 20px;
             }
             .site-footer {
                 font-size: 0.95rem;
@@ -173,6 +221,28 @@
         <span class="welcome-emoji">👋</span>
         <h2>Welcome!</h2>
         <p>Select a tool from the navigation bar to get started.</p>
+        <div class="tools-grid">
+            <a href="financial-calculator.html" class="tool-card">
+                <div class="tool-icon">🧮</div>
+                <div class="tool-title">Financial Calculator</div>
+                <div class="tool-desc">Calculate various financial metrics and projections.</div>
+            </a>
+            <a href="interest-rate-calculator.html" class="tool-card">
+                <div class="tool-icon">📈</div>
+                <div class="tool-title">Interest Rate Calculator</div>
+                <div class="tool-desc">Determine the future value of your investments.</div>
+            </a>
+            <a href="debt-optimizer.html" class="tool-card">
+                <div class="tool-icon">💰</div>
+                <div class="tool-title">Debt Repayment Optimizer</div>
+                <div class="tool-desc">Plan and optimize your debt repayment strategy.</div>
+            </a>
+            <a href="compound-interest-calculator.html" class="tool-card">
+                <div class="tool-icon">📊</div>
+                <div class="tool-title">Compound Interest Calculator</div>
+                <div class="tool-desc">Calculate the power of compound interest.</div>
+            </a>
+        </div>
     </div>
     <footer class="site-footer">
         &copy; 2025 Parjad Minooei
